--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,9 +3,9 @@
 /*--------------
   Font
   -------------- */
-@import 'https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,600';
+@import 'https://fonts.googleapis.com/css?family=Raleway:300,300i,600';
 
-$base-font: "Source Sans Pro", Helvetica, Arial, sans-serif;
+$base-font: "Raleway", Helvetica, Arial, sans-serif;
 $code-font: Menlo, Monaco, monospace;
 $code-gist-font: Menlo, Monaco, "Courier New", monospace !important;
 
