--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <h1 class="header-title">
-    <a href="{{ site.url }}{{ site.baseurl }}">{{ site.name }}<span></span></a>
+    <a href="{{ site.url }}{{ site.baseurl }}">{{ site.name }}<span> | blog</span></a>
   </h1>
   <nav class="header-nav">
     {% for nav in site.nav %}
