--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
 		{% endif %}
 
 		{% if site.author.soundcloud %}
-		<a href="https://soundcloud.com/{ site.author.soundcloud }}"><i class="fa fa-soundcloud" aria-hidden="true"></i></a>
+		<a href="https://soundcloud.com/{{ site.author.soundcloud }}"><i class="fa fa-soundcloud" aria-hidden="true"></i></a>
 		{% endif %}
 
 		{% if site.author.email %}
