New blog layout

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,43 +1,21 @@
-<!-- Documents about icons are here: http://fontawesome.io/icons/ -->
-<div class="footer">
-	<hr />
-	<div class="footer-link">
-		{% if site.author.facebook %}
-		<a href="https://www.facebook.com/{{ site.author.facebook }}"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-		{% endif %}
+<footer class="site-footer">
+  <div class="container">
+    <div class="footer left column one-half">
+      <section class="small-font">
+        © 2018 
+        Powered by <a href="https://github.com/jekyll/jekyll">jekyll</a>
+      </section>
+    </div>
 
-		{% if site.author.twitter %}
-		<a href="https://twitter.com/{{ site.author.twitter }}"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-		{% endif %}
-
-		{% if site.author.github %}
-		<a href="https://github.com/{{ site.author.github }}"><i class="fa fa-github" aria-hidden="true"></i></a>
-		{% endif %}
-
-		{% if site.author.linkedin %}
-		<a href="https://www.linkedin.com/in/{{ site.author.linkedin }}"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-		{% endif %}
-
-		{% if site.author.medium %}
-		<a href="https://medium.com/@{{ site.author.medium }}"><i class="fa fa-medium" aria-hidden="true"></i></a>
-		{% endif %}
-
-		{% if site.author.tumblr %}
-		<a href="https://{{ site.author.tumblr }}.tumblr.com"><i class="fa fa-tumblr" aria-hidden="true"></i></a>
-		{% endif %}
-
-		{% if site.author.bandcamp %}
-		<a href="https://{{ site.author.bandcamp }}.bandcamp.com"><i class="fa fa-bandcamp" aria-hidden="true"></i></a>
-		{% endif %}
-
-		{% if site.author.soundcloud %}
-		<a href="https://soundcloud.com/{{ site.author.soundcloud }}"><i class="fa fa-soundcloud" aria-hidden="true"></i></a>
-		{% endif %}
-
-		{% if site.author.email %}
-		<a href="mailto:{{ site.author.email }}"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-		{% endif %}
-
-	</div>
-	© 2017 {{ site.author.name }}. All rights reserved.
-</div>
+    <div class="footer right column one-half">
+      <section class="small-font">
+        {% if site.github_username %}
+        {% include icon-github.html username=site.github_username %}
+        {% endif %}
+        {% if site.twitter_username %}
+        {% include icon-twitter.html username=site.twitter_username %}
+        {% endif %}
+      </section>
+    </div>
+  </div>
+</footer>
