--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,12 +1,14 @@
 ---
 layout: default
 ---
-<header>
-  <h1 class="header-small">
-    <a href="{{site.url}}{{site.baseurl}}">{{ site.name }}</a>
-  </h1>
-</header>
-<div class="page">
-  <h1 class="page-title">{{ page.title }}</h1>
-  {{ content }}
-</div>
+<article class="post">
+
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title }}</h1>
+  </header>
+
+  <div class="article-content">
+    {{ content }}
+  </div>
+
+</article>
