--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,45 +1,27 @@
 ---
 layout: default
 ---
-<header>
-  <h1 class="header-small">
-    <a href="{{site.url}}{{site.baseurl}}">{{ site.name }}</a>
-  </h1>
-</header>
-<div class="post">
-  <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">
-    <time>{{ page.date | date_to_string }}</time>
-  </span>
-  <div class="post-tag">
-    <ul>
-      {% for tag in page.tags %}
-      <li>
-        <a href="{{ site.url }}{{ site.baseurl }}/tags#{{ tag }}" class="tag">
-          <span class="term">{{ tag }}</span>
-        </a>
-      </li>
-      {% unless forloop.last %}{% endunless %}
-      {% endfor %}
-    </ul>
+<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+
+  <header class="article_header">
+    <h1 class="article_title" itemprop="name headline">{{ page.title }}</h1>
+    <p class="article_meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+  </header>
+
+  <div class="article-content" itemprop="articleBody">
+    {{ page.content }}
   </div>
 
-  {{ content }}
+  <footer class="article-footer">
 
+  {% include share.html %}
 
-  <!-- Share -->
-  {% if page.share != false %}
-  <div class="post-share">
-    <hr>
-    {% include share.html %}
-    <hr>
-  </div>
-  {% endif %}
+  <hr/>
 
-  <!-- Disqus -->
-  {% if page.comments != false and site.disqus.id %}
-  <section id="disqus_thread"></section>
-  {% include disqus.html %}
-  {% endif %}
+  {% include author.html %}
 
-</div>
+  </footer>
+
+  {% include dq.html %}
+
+</article>
