Change link colors

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -160,7 +160,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 2rem;
   font-weight: 400;
-  color: #2aa198;
+  color: #93a1a1;
   font-family: 'Spinnaker'; }
 h1 { font-size: 2.2rem; line-height: 1.2;  letter-spacing: 0rem;}
 h2 { font-size: 2.0rem; line-height: 1.25; letter-spacing: 0rem; }
@@ -186,7 +186,7 @@ p {
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #2aa198;
+  color: #93a1a1;
   text-decoration: none;
   //background-color: transparent;
   -webkit-transition: color .4s;
