--- a/css/main.scss
+++ b/css/main.scss
@@ -22,7 +22,7 @@ $text-color:       #586e75;
 $background-color: #002b36;
 $brand-color:      #2a7ae2;
 
-$link-color:       #2aa198;
+$link-color:       #93a1a1;
 $link-hover:       #d33682;
 
 $grey-color:       #657b83;
