Update link hover color

--- a/css/main.scss
+++ b/css/main.scss
@@ -23,7 +23,7 @@ $background-color: #002b36;
 $brand-color:      #2a7ae2;
 
 $link-color:       #93a1a1;
-$link-hover:       #d33682;
+$link-hover:       #859900;
 
 $grey-color:       #657b83;
 $grey-color-light: #839496;
