--- a/css/main.scss
+++ b/css/main.scss
@@ -17,7 +17,7 @@ $max-width:        48rem;
 
 $text-color:       #333;
 $background-color: #fff;
-$link-color:       #0645ad;
+$link-color:       #2aa198;
 
 $grey-color:       #aaa;
 $grey-color-light: lighten($grey-color, 25%);
