Adjust header font sizes

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -160,9 +160,12 @@
         font-weight: normal;
     }
 
-    h1,
-    h2 {
+    h1 {
         font-size: 2rem;
+    }
+
+    h2 {
+        font-size: 1.75rem;
     }
 
     h3 {
