Update css, add auto updates post

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -165,7 +165,8 @@
     }
 
     h2 {
-        font-size: 1.75rem;
+        font-size: 1.50rem;
+        font-variant: small-caps;
     }
 
     h3 {
