--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -124,7 +124,7 @@
 }
 
 .post-title {
-    font-size: 2rem;
+    font-size: 2.25rem;
     letter-spacing: -1px;
     line-height: 1.2;
     margin-bottom: 0.5rem;
@@ -166,17 +166,13 @@
 
     h2 {
         font-size: 1.50rem;
-        font-variant: small-caps;
     }
 
     h3 {
-        font-size: 1.5rem;
-    }
-
-    h4 {
         font-size: 1.25rem;
     }
 
+    h4,
     h5,
     h6 {
         font-size: 1rem;
