--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,10 @@
 <html>
   {% include head.html %}
   <body>
-    <h1 class="smallcap"><a class="site-title" href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">{{ site.title }}</a></h1>
-    {% include nav.html %}
+    <section class="site-header">
+      <h1 class="smallcap"><a class="site-title" href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">{{ site.title }}</a></h1>
+      {% include nav.html %}
+    </section>
     <div class="page-content">
       {{ content }}
       <div class="copyright">
