New fonts, colors

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -56,8 +56,11 @@
     a:hover {
         text-decoration: none;
         letter-spacing: 2px;
-        background-color: #333;
-        color: #eee;
+        //background-color: #333;
+        //color: #eee;
+        // SR Custom
+        background-color: #073642;
+        color: #002b36;
         padding-left: 0.5rem;
         padding-right: 0.5rem;
         padding-top: 0.2rem;
