--- a/css/main.scss
+++ b/css/main.scss
@@ -4,8 +4,10 @@
 @charset "utf-8";
 
 // Our variables
-$base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-$code-font-family: Inconsolata, Monaco, Consolas, monospace;
+//$base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+$base-font-family: 'Ubuntu', sans-serif;
+//$code-font-family: Inconsolata, Monaco, Consolas, monospace;
+$code-font-family: 'Ubuntu Mono', monospace;
 $base-font-size:   16px;
 $base-font-weight: 300;
 $small-font-size:  0.875rem;
@@ -17,7 +19,7 @@ $max-width:        48rem;
 
 $text-color:       #333;
 $background-color: #fff;
-$link-color:       #2aa198;
+$link-color:       #073642;
 
 $grey-color:       #aaa;
 $grey-color-light: lighten($grey-color, 25%);
