--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -60,7 +60,7 @@
         //color: #eee;
         // SR Custom
         background-color: #073642;
-        color: #002b36;
+        color: #fdf6e3;
         padding-left: 0.5rem;
         padding-right: 0.5rem;
         padding-top: 0.2rem;
